--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PAYMENT ZECTER</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link rel="icon" href="https://files.catbox.moe/4fhwxi.jpg" type="image/png">
+  <link rel="icon" href="https://files.catbox.moe/47u40k.jpg" type="image/png">
 
   <style>
     * {
@@ -157,7 +157,7 @@
   <!-- Halaman -->
   <div id="paymentPage" class="page active">
     <div class="logo-container">
-      <img src="https://files.catbox.moe/4fhwxi.jpg" alt="Logo" class="logo">
+      <img src="https://files.catbox.moe/47u40k.jpg" alt="Logo" class="logo">
       <div class="title">PAYMENT ZECTER</div>
       <div class="subtitle">Klik Button untuk salin nomor</div>
     </div>
