--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PAYMENT ZECTER</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link rel="icon" href="https://files.catbox.moe/47u40k.jpg" type="image/png">
+  <link rel="icon" href="https://files.catbox.moe/kbio4g.jpg" type="image/png">
 
   <style>
     * {
