--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <!-- Halaman -->
   <div id="paymentPage" class="page active">
     <div class="logo-container">
-      <img src="https://files.catbox.moe/47u40k.jpg" alt="Logo" class="logo">
+      <img src="https://files.catbox.moe/kbio4g.jpg" alt="Logo" class="logo">
       <div class="title">PAYMENT ZECTER</div>
       <div class="subtitle">Klik Button untuk salin nomor</div>
     </div>
